--- a/src/app/ServiceCRM/birthday-update-crm/birthday-update-crm.component.html
+++ b/src/app/ServiceCRM/birthday-update-crm/birthday-update-crm.component.html
@@ -3,6 +3,7 @@
 <mat-card *ngIf="!isLoading" class="crm-container">
   <mat-card-title>יומולדת - CRM</mat-card-title>
 
+  <!-- Fun header animation -->
   <mat-card class="crm-card lottie-full-card">
     <ng-lottie
       [options]="{
@@ -13,10 +14,9 @@
       (animationCreated)="animationCreated($event)">
     </ng-lottie>
   </mat-card>
-  
-  
-<!-- 🎈 Lottie Balloon Animation -->
-<div *ngIf="showLottie" class="balloon-animation-overlay">
+
+  <!-- 🎈 Lottie Balloon Animation overlay on success -->
+  <div *ngIf="showLottie" class="balloon-animation-overlay">
     <ng-lottie
       [options]="lottieOptions"
       (animationCreated)="animationCreated($event)"
@@ -24,87 +24,104 @@
       height="400px">
     </ng-lottie>
   </div>
+
+  <!-- Search -->
   <mat-form-field class="long-search-bar" style="flex: 1; margin-right: 10px;">
     <mat-label class="filters" style="color: blue">חיפוש</mat-label>
     <input matInput (keyup)="applyFilter($event)" class="search-input" placeholder="הזן ערך לחיפוש..." />
   </mat-form-field>
 
+  <!-- Table -->
   <div class="table-container">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" dir="rtl">
 
-      <ng-container matColumnDef="CaseNumber">
+      <!-- caseNumber -->
+      <ng-container matColumnDef="caseNumber">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר מקרה</th>
-        <td mat-cell *matCellDef="let row">{{ row.CaseNumber }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.caseNumber }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="DepartmentName">
+      <!-- departmentName -->
+      <ng-container matColumnDef="departmentName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>מחלקה</th>
-        <td mat-cell *matCellDef="let row">{{ row.DepartmentName }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.departmentName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="EnterDepartDate">
+      <!-- enterDepartDate -->
+      <ng-container matColumnDef="enterDepartDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
-        <td mat-cell *matCellDef="let row">{{ row.EnterDepartDate | date: 'dd/MM/yyyy' }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.enterDepartDate | date: 'dd/MM/yyyy' }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="EnterDepartTime">
+      <!-- enterDepartTime -->
+      <ng-container matColumnDef="enterDepartTime">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>שעת קבלה</th>
-        <td mat-cell *matCellDef="let row">{{ row.EnterDepartTime }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.enterDepartTime }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="ExitHospTime">
+      <!-- exitHospTime -->
+      <ng-container matColumnDef="exitHospTime">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>שעת שחרור</th>
-        <td mat-cell *matCellDef="let row">{{ row.ExitHospTime }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.exitHospTime }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="FirstName">
+      <!-- firstName -->
+      <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>שם פרטי</th>
-        <td mat-cell *matCellDef="let row">{{ row.FirstName }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.firstName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="LastName">
+      <!-- lastName -->
+      <ng-container matColumnDef="lastName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>שם משפחה</th>
-        <td mat-cell *matCellDef="let row">{{ row.LastName }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.lastName }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Telephone">
+      <!-- telephone -->
+      <ng-container matColumnDef="telephone">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>טלפון</th>
-        <td mat-cell *matCellDef="let row">{{ row.Telephone }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.telephone }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Mobile">
+      <!-- mobile -->
+      <ng-container matColumnDef="mobile">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>נייד</th>
-        <td mat-cell *matCellDef="let row">{{ row.Mobile }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.mobile }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="BirthDate">
+      <!-- birthDate -->
+      <ng-container matColumnDef="birthDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך לידה</th>
-        <td mat-cell *matCellDef="let row">{{ row.BirthDate | date: 'dd/MM/yyyy' }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.birthDate | date: 'dd/MM/yyyy' }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="IsBirthday">
+      <!-- isBirthday -->
+      <ng-container matColumnDef="isBirthday">
         <th mat-header-cell *matHeaderCellDef>יומולדת?</th>
         <td mat-cell *matCellDef="let row">
-          <span [ngClass]="row.IsBirthday ? 'birthday-yes' : 'birthday-no'">
-            {{ row.IsBirthday ? 'כן' : 'לא' }}
+          <span [ngClass]="row.isBirthday ? 'birthday-yes' : 'birthday-no'">
+            {{ row.isBirthday ? 'כן' : 'לא' }}
           </span>
         </td>
       </ng-container>
-<!-- BirthdayUpdate Toggle -->
-<!-- Toggle Column -->
-<ng-container matColumnDef="BirthdayUpdate">
-    <th mat-header-cell *matHeaderCellDef>עדכון יומולדת</th>
-    <td mat-cell *matCellDef="let row">
-      <mat-slide-toggle
-        [checked]="row.BirthdayUpdate === 'yes'"
-        (change)="onBirthdayToggle(row, $event)">
-      </mat-slide-toggle>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="BirthdayUpdateDate">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך עדכון יומלדת</th>
-    <td mat-cell *matCellDef="let row">{{ row.BirthdayUpdateDate | date: 'dd/MM/yyyy' }}</td>
-  </ng-container>
+
+      <!-- birthdayUpdate toggle -->
+      <ng-container matColumnDef="birthdayUpdate">
+        <th mat-header-cell *matHeaderCellDef>עדכון יומולדת</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-slide-toggle
+            [checked]="row.birthdayUpdate === 'yes'"
+            (change)="onBirthdayToggle(row, $event)">
+          </mat-slide-toggle>
+        </td>
+      </ng-container>
+
+      <!-- birthdayUpdateDate -->
+      <ng-container matColumnDef="birthdayUpdateDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך עדכון יומולדת</th>
+        <td mat-cell *matCellDef="let row">{{ row.birthdayUpdateDate | date: 'dd/MM/yyyy' }}</td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
