--- a/src/app/ServiceCRM/questionnaire-remarks-phone-call-dialog/questionnaire-remarks-phone-call-dialog.component.html
+++ b/src/app/ServiceCRM/questionnaire-remarks-phone-call-dialog/questionnaire-remarks-phone-call-dialog.component.html
@@ -26,7 +26,7 @@
        
         <div class="contact-item">
           <mat-icon class="icon">smartphone</mat-icon>
-          <span>{{ data.CellNumber }}</span>
+          <span>{{ data.CellNumber2 || data.CellNumber }}</span>
         </div>
 
      
